[package]
name = "ml-bridge-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
eerie = { version = "0.2.2", features = [
    "runtime",
    "std",
], default-features = false, git = "https://github.com/G-Levine/eerie" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
