[package]
name = "ml-bridge-rs"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
base64 = "0.22.1"
eerie = { version = "0.2.2", features = [
    "runtime",
    "std",
], default-features = false, git = "https://github.com/G-Levine/eerie" }
proc-macro2 = "1.0.93"
quote = "1.0.38"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
syn = { version = "2.0.98", features = ["proc-macro"] }
